--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "9.1.4",
+    "node-sass": "^4.13.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.9",
+    "@types/react": "^16.9.11",
+    "typescript": "^3.7.2"
   }
 }
