--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.19.0",
     "next": "9.1.4",
     "node-sass": "^4.13.0",
     "react": "16.12.0",
