--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "arnoldjos",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.6.1",
-    "@material-ui/icons": "^4.5.1",
-    "@zeit/next-sass": "^1.0.1",
-    "axios": "^0.19.0",
-    "next": "9.1.4",
-    "node-sass": "^4.13.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
-  },
-  "devDependencies": {
-    "@types/node": "^12.12.9",
-    "@types/react": "^16.9.11",
-    "typescript": "^3.7.2"
-  }
+	"name": "arnoldjos",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@material-ui/core": "^4.7.0",
+		"@material-ui/icons": "^4.5.1",
+		"@zeit/next-sass": "^1.0.1",
+		"axios": "^0.19.0",
+		"next": "9.1.4",
+		"node-sass": "^4.13.0",
+		"react": "16.12.0",
+		"react-dom": "16.12.0",
+		"react-ga": "^2.7.0",
+		"react-helmet": "^5.2.1"
+	},
+	"devDependencies": {
+		"@types/node": "^12.12.14",
+		"@types/react": "^16.9.13",
+		"typescript": "^3.7.2"
+	}
 }
