--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,12 @@ services:
     container_name: proxy
     ports:
       - '80:80'
+      - '443:443'
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/www/certbot
+      - dhparam:/etc/ssl/certs
     depends_on:
       - nextjs
   nextjs:
@@ -17,3 +21,15 @@ services:
       - '3000'
     environment:
       - NODE_ENV=deployment
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/www/certbot
+    depends_on:
+      - proxy
+    command: command: certonly --webroot --webroot-path=/var/www/html --email arnold.anaviso@gmail.com --agree-tos --no-eff-email --staging -d arnoldjoslive.com  -d www.arnoldjoslive.com
+
+volumes:
+  certbot-etc:
+  certbot-var:
