--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,20 @@
 server {
+    listen 80;
+    server_name: arnoldjoslive.com www.arnoldjoslive.com;
 
-	listen 80;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+		location /.well-known/acme-challenge/ {
+			root /var/www/certbot;
+		}
+}
+
+server {
+	listen 443 ssl;
+	server_name: arnoldjoslive.com www.arnoldjoslive.com;
+
 	location / {
 		proxy_pass         http://nextjs:3000;
 		proxy_redirect     off;
@@ -9,4 +23,9 @@ server {
 		proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header   X-Forwarded-Host $server_name;
 	}
+
+	ssl_certificate /etc/letsencrypt/live/arnoldjoslive.org/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/arnoldjoslive.org/privkey.pem;
+	include /etc/letsencrypt/options-ssl-nginx.conf;
+	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
