--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/www/certbot
+      - certbot-var:/var/lib/letsencrypt
     depends_on:
       - nextjs
   nextjs:
@@ -21,10 +21,11 @@ services:
     environment:
       - NODE_ENV=deployment
   certbot:
+    container_name: certbot
     image: certbot/certbot
     volumes:
       - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/www/certbot
+      - certbot-var:/var/lib/letsencrypt
     depends_on:
       - proxy
     command: certonly --webroot --webroot-path=/var/www/html --email arnold.anaviso@gmail.com --agree-tos --no-eff-email --staging -d arnoldjoslive.com  -d www.arnoldjoslive.com
