and init letsecrypt.sh

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,23 @@
 server {
 	listen 80;
 	listen [::]:80;
-	root /usr/share/nginx/html;
-	# server_name: arnoldjoslive.com www.arnoldjoslive.com;
+	server_name: arnoldjoslive.com www.arnoldjoslive.com;
 
-	# location / {
-	# 		return 301 https://$host$request_uri;
-	# }
 	location / {
-		proxy_pass         http://nextjs:3000;
-		proxy_redirect     off;
-		proxy_set_header   Host $host;
-		proxy_set_header   X-Real-IP $remote_addr;
-		proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header   X-Forwarded-Host $server_name;
+			return 301 https://$host$request_uri;
 	}
 
+	# location / {
+	# 	proxy_pass         http://nextjs:3000;
+	# 	proxy_redirect     off;
+	# 	proxy_set_header   Host $host;
+	# 	proxy_set_header   X-Real-IP $remote_addr;
+	# 	proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+	# 	proxy_set_header   X-Forwarded-Host $server_name;
+	# }
+
 	location ~ /.well-known/acme-challenge/ {
-		allow all;
-		root /usr/share/nginx/html;
+		root /var/www/certbot;
 	}
 }
 
@@ -35,8 +34,8 @@ server {
 		proxy_set_header   X-Forwarded-Host $server_name;
 	}
 
-	# ssl_certificate /etc/letsencrypt/live/arnoldjoslive.org/fullchain.pem;
-	# ssl_certificate_key /etc/letsencrypt/live/arnoldjoslive.org/privkey.pem;
-	# include /etc/letsencrypt/options-ssl-nginx.conf;
-	# ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+	ssl_certificate /etc/letsencrypt/live/arnoldjoslive.com/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/arnoldjoslive.com/privkey.pem;
+	include /etc/letsencrypt/options-ssl-nginx.conf;
+	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
