--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,11 @@ services:
       - '443:443'
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./letsencrypt-site:/usr/share/nginx/html
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
     depends_on:
       - nextjs
+      - certbot
     networks:
       - app
   nextjs:
@@ -31,15 +31,13 @@ services:
     volumes:
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
-    depends_on:
-      - proxy
     networks:
       - app
-    command: certonly --nginx --email arnold.anaviso@gmail.com --agree-tos --no-eff-email --staging -d arnoldjoslive.com  -d www.arnoldjoslive.com
 
 volumes:
   certbot-etc:
   certbot-var:
+
 
 networks:
   app:
