--- a/nginx.conf
+++ b/nginx.conf
@@ -16,9 +16,9 @@ server {
 	# 	proxy_set_header   X-Forwarded-Host $server_name;
 	# }
 
-	location ~ /.well-known/acme-challenge/ {
-		root /var/www/certbot;
-	}
+	# location ~ /.well-known/acme-challenge/ {
+	# 	root /var/www/certbot;
+	# }
 }
 
 server {
@@ -34,8 +34,8 @@ server {
 		proxy_set_header   X-Forwarded-Host $server_name;
 	}
 
-	ssl_certificate /etc/letsencrypt/live/arnoldjoslive.com/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/arnoldjoslive.com/privkey.pem;
-	include /etc/letsencrypt/options-ssl-nginx.conf;
-	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+	# ssl_certificate /etc/letsencrypt/live/arnoldjoslive.com/fullchain.pem;
+	# ssl_certificate_key /etc/letsencrypt/live/arnoldjoslive.com/privkey.pem;
+	# include /etc/letsencrypt/options-ssl-nginx.conf;
+	# ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
