--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,9 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
     depends_on:
       - nextjs
-      - certbot
     networks:
       - app
   nextjs:
@@ -31,13 +31,22 @@ services:
     volumes:
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
+    depends_on:
+      - proxy
     networks:
       - app
+    command: certonly --webroot --webroot-path=/var/www/html --email arnold.anaviso@gmail.com --agree-tos --no-eff-email --staging -d arnoldjoslive.com  -d www.arnoldjoslive.com
 
 volumes:
   certbot-etc:
   certbot-var:
-
+  web-root:
+    driver: local
+    driver_opts:
+      type: none
+      device: .
+      o: bind
 
 networks:
   app:
