--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,12 @@
 server {
 	listen 80;
 	listen [::]:80;
-	server_name: arnoldjoslive.com www.arnoldjoslive.com;
-
-	location / {
-			return 301 https://$host$request_uri;
-	}
+	root /var/www/html;
+	server_name arnoldjoslive.com www.arnoldjoslive.com;
 
 	# location / {
-	# 	proxy_pass         http://nextjs:3000;
-	# 	proxy_redirect     off;
-	# 	proxy_set_header   Host $host;
-	# 	proxy_set_header   X-Real-IP $remote_addr;
-	# 	proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-	# 	proxy_set_header   X-Forwarded-Host $server_name;
+	# 		return 301 https://$host$request_uri;
 	# }
-
-	# location ~ /.well-known/acme-challenge/ {
-	# 	root /var/www/certbot;
-	# }
-}
-
-server {
-	listen 443;
-	server_name: arnoldjoslive.com www.arnoldjoslive.com;
 
 	location / {
 		proxy_pass         http://nextjs:3000;
@@ -34,8 +17,22 @@ server {
 		proxy_set_header   X-Forwarded-Host $server_name;
 	}
 
-	# ssl_certificate /etc/letsencrypt/live/arnoldjoslive.com/fullchain.pem;
-	# ssl_certificate_key /etc/letsencrypt/live/arnoldjoslive.com/privkey.pem;
-	# include /etc/letsencrypt/options-ssl-nginx.conf;
-	# ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+	location ~ /.well-known/acme-challenge/ {
+		allow all;
+		root /var/www/html;
+	}
+}
+
+server {
+	listen 443;
+	server_name arnoldjos.com arnoldjoslive.com;
+
+	location / {
+		proxy_pass         http://nextjs:3000;
+		proxy_redirect     off;
+		proxy_set_header   Host $host;
+		proxy_set_header   X-Real-IP $remote_addr;
+		proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header   X-Forwarded-Host $server_name;
+	}
 }
