--- a/nginx.conf
+++ b/nginx.conf
@@ -14,25 +14,25 @@ server {
 	}
 }
 
-server {
-	listen 443 ssl http2;
-	listen [::]:443 ssl http2;
-	server_name arnoldjos.com arnoldjoslive.com;
+# server {
+# 	listen 443 ssl http2;
+# 	listen [::]:443 ssl http2;
+# 	server_name arnoldjos.com arnoldjoslive.com;
 
-	location / {
-		proxy_pass         http://nextjs:3000;
-		proxy_redirect     off;
-		proxy_set_header   Host $host;
-		proxy_set_header   X-Real-IP $remote_addr;
-		proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header   X-Forwarded-Host $server_name;
-	}
+# 	location / {
+# 		proxy_pass         http://nextjs:3000;
+# 		proxy_redirect     off;
+# 		proxy_set_header   Host $host;
+# 		proxy_set_header   X-Real-IP $remote_addr;
+# 		proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+# 		proxy_set_header   X-Forwarded-Host $server_name;
+# 	}
 
-	ssl_certificate /etc/letsencrypt/live/arnoldjoslive.com/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/arnoldjoslive.com/privkey.pem;
-	ssl_buffer_size 8k;
-  ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
-	ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
-	ssl_prefer_server_ciphers on;
-	ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-}
+# 	ssl_certificate /etc/letsencrypt/live/arnoldjoslive.com/fullchain.pem;
+# 	ssl_certificate_key /etc/letsencrypt/live/arnoldjoslive.com/privkey.pem;
+# 	ssl_buffer_size 8k;
+#   ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+# 	ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+# 	ssl_prefer_server_ciphers on;
+# 	ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+# }
