--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,7 +52,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: .
+      device: ./dhparam/
       o: bind
 
 networks:
