--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,13 +46,13 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: .
+      device: ./.next
       o: bind
   dhparam:
     driver: local
     driver_opts:
       type: none
-      device: $(pwd)/dhparam/
+      device: ./dhparam
       o: bind
 
 networks:
