--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,13 +46,13 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: ./.next
+      device: ./.next/
       o: bind
   dhparam:
     driver: local
     driver_opts:
       type: none
-      device: ./dhparam
+      device: ./dhparam/
       o: bind
 
 networks:
