--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,10 +9,10 @@ services:
       - '443:443'
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
       - web-root:/var/www/html
-      - dhparam:/etc/ssl/certs
     depends_on:
       - nextjs
     networks:
@@ -47,12 +47,6 @@ volumes:
     driver_opts:
       type: none
       device: ./.next/
-      o: bind
-  dhparam:
-    driver: local
-    driver_opts:
-      type: none
-      device: ./dhparam/
       o: bind
 
 networks:
