--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,11 +8,11 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem:ro
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
-      - web-root:/var/www/html
+      - ./.next:/var/www/html
     depends_on:
       - nextjs
     networks:
@@ -32,22 +32,12 @@ services:
     volumes:
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
-      - web-root:/var/www/html
+      - ./.next:/var/www/html
     depends_on:
       - proxy
     networks:
       - app
     command: certonly --webroot --webroot-path=/var/www/html --email arnold.anaviso@gmail.com --agree-tos --no-eff-email --force-renewal --staging -d arnoldjoslive.com  -d www.arnoldjoslive.com
-
-volumes:
-  certbot-etc:
-  certbot-var:
-  web-root:
-    driver: local
-    driver_opts:
-      type: none
-      device: ./.next
-      o: bind
 
 networks:
   app:
