Remove staging in certbot

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
       - proxy
     networks:
       - app
-    command: certonly --webroot --webroot-path=/var/www/html --email arnold.anaviso@gmail.com --agree-tos --no-eff-email --force-renewal --staging -d arnoldjoslive.com  -d www.arnoldjoslive.com
+    command: certonly --webroot --webroot-path=/var/www/html --email arnold.anaviso@gmail.com --agree-tos --no-eff-email --force-renewal -d arnoldjoslive.com  -d www.arnoldjoslive.com
 
 volumes:
   certbot-etc:
