--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,20 @@
 version: '3.7'
 
 services:
-  proxy:
-    image: nginx:alpine
-    container_name: proxy
+  reverse-proxy:
+    image: traefik:v2.0
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
     ports:
-      - '8010:80'
-      - '8510:443'
+      # The HTTP port
+      - "80:80"
+      - "443:443"
+      - "8080:8080"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem:ro
-      - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/lib/letsencrypt
-      - ./.next:/var/www/html
-    depends_on:
-      - nextjs
-    networks:
-			- app
-		environment:
-			VIRTUAL_HOST: arnoldjoslive.com, www.arnoldjoslive.com
+      - /var/run/docker.sock:/var/run/docker.sock
   nextjs:
     container_name: nextjs
     build: .
@@ -26,27 +22,7 @@ services:
       - '3000'
     environment:
       - NODE_ENV=deployment
-    networks:
-      - app
-  certbot:
-    container_name: certbot
-    image: certbot/certbot
-    volumes:
-      - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/lib/letsencrypt
-      - ./.next:/var/www/html
-    depends_on:
-      - proxy
-    networks:
-      - app
-		command: certonly --webroot --webroot-path=/var/www/html --email arnold.anaviso@gmail.com --agree-tos --no-eff-email --force-renewal -d arnoldjoslive.com  -d www.arnoldjoslive.com
-
-volumes:
-  certbot-etc:
-  certbot-var:
-
-networks:
-	app:
-	default:
-		external:
-			name: nginx-proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.nextjs.rule=Host(`nextjs.localhost`)"
+      - "traefik.http.routers.nextjs.entrypoints=web"
