Expose network to other containers

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   reverse-proxy:
     image: traefik:v2.0
     command:
-      - "--api.insecure=true"
+      - "--api.insecure=false"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
@@ -15,6 +15,8 @@ services:
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - reverse-proxy
   nextjs:
     container_name: nextjs
     build: .
@@ -24,5 +26,10 @@ services:
       - NODE_ENV=deployment
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nextjs.rule=Host(`nextjs.localhost`)"
+      - "traefik.http.routers.nextjs.rule=Host(`arnoldjoslive.com`, `www.arnoldjoslive.com`)"
       - "traefik.http.routers.nextjs.entrypoints=web"
+    networks:
+      - reverse-proxy
+
+networks:
+  reverse-proxy:
