--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   reverse-proxy:
     image: traefik:v2.0
     command:
-      - "--api.insecure=true"
+      - "--api.insecure=false"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
@@ -27,7 +27,7 @@ services:
       - NODE_ENV=deployment
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nextjs.rule=Host(`arnoldjoslive.com`, `www.arnoldjoslive.com`, `nextjs.localhost`)"
+      - "traefik.http.routers.nextjs.rule=Host(`arnoldjoslive.com`, `www.arnoldjoslive.com`)"
       - "traefik.http.routers.nextjs.entrypoints=web"
 
 networks:
