--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,20 +4,26 @@ services:
   reverse-proxy:
     image: traefik:v2.0
     command:
-      - "--api.insecure=false"
+      - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.mytlschallenge.acme.tlschallenge=true"
+      - "--certificatesresolvers.mytlschallenge.acme.email=arnold.anaviso@gmail.com"
+      - "--certificatesresolvers.mytlschallenge.acme.storage=/letsencrypt/acme.json"
+      - "--log.level=DEBUG"
+      - "--certificatesresolvers.mytlschallenge.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
     ports:
-      # The HTTP port
       - "80:80"
       - "443:443"
       - "8080:8080"
     volumes:
+      - "./letsencrypt:/letsencrypt"
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - default
-      - reverse-proxy
+      - traefik-reverse-proxy
   nextjs:
     container_name: nextjs
     build: .
@@ -27,8 +33,9 @@ services:
       - NODE_ENV=deployment
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nextjs.rule=Host(`arnoldjoslive.com`, `www.arnoldjoslive.com`)"
+      - "traefik.http.routers.nextjs.rule=Host(`arnoldjoslive.com`, `www.arnoldjoslive.com`, `nextjs.localhost`)"
       - "traefik.http.routers.nextjs.entrypoints=web"
 
 networks:
-  reverse-proxy:
+  traefik-reverse-proxy:
+    external: true
