--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,12 @@ services:
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.mytlschallenge.acme.tlschallenge=true"
       - "--certificatesresolvers.mytlschallenge.acme.email=arnold.anaviso@gmail.com"
       - "--certificatesresolvers.mytlschallenge.acme.storage=/letsencrypt/acme.json"
-      - "--log.level=DEBUG"
       - "--certificatesresolvers.mytlschallenge.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
+      - "--log.level=DEBUG"
     ports:
       - "80:80"
       - "443:443"
@@ -33,9 +32,17 @@ services:
       - NODE_ENV=deployment
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nextjs.rule=Host(`arnoldjoslive.com`, `www.arnoldjoslive.com`, `nextjs.localhost`)"
-      - "traefik.http.routers.nextjs.entrypoints=web"
+      - "traefik.http.routers.nextjs.rule=Host(`arnoldjoslive.com`, `www.arnoldjoslive.com`)"
+      - "traefik.http.routers.nextjs.entrypoints=websecure"
       - "traefik.http.routers.nextjs.tls.certresolver=mytlschallenge"
+  whoami:
+    image: "containous/whoami"
+    container_name: "simple-service"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.whoami.rule=Host(`whoami.arnoldjoslive.com`)"
+      - "traefik.http.routers.whoami.entrypoints=websecure"
+      - "traefik.http.routers.whoami.tls.certresolver=mytlschallenge"
 
 networks:
   traefik-reverse-proxy:
