Fixed redirect to https

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,12 +24,10 @@ services:
       - default
       - traefik-reverse-proxy
     labels:
-      # Middleware redirect
+      - "traefik.http.routers.http-catchall.rule=hostregexp(`{host:[a-z-.]+}`)"
+      - "traefik.http.routers.http-catchall.entrypoints=web"
+      - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      # Global redirect to https
-      - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
-      - "traefik.http.routers.redirs.entrypoints=web"
-      - "traefik.http.routers.redirs.middlewares=redirect-to-https"
   nextjs:
     container_name: nextjs
     build: .
